# ChangeLog for x11-plugins/pidgin-window_merge
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pidgin-window_merge-0.2_p20120420 (04 Jul 2012)

  04 Jul 2012; Dmitry 'daks' Fomenko daks12@gmail.com
  +pidgin-window_merge-0.2_p20120420.ebuild, +metadata.xml:
  Initial import from layman/sunrise.
