@@ -1,4 +1,6 @@
-DIST pidgin-window_merge-0.2_p20120420.tar.gz 27720 RMD160 1f5ef3609f6b8b5450546ef58ffcc0969ac49af0 SHA1 68946179dd6cfa8b80ac5cb85d191df83670db8e SHA256 8aa30f41189a6f8e5bc16277034675dfe6bec4d756f3e4ea86730e3e10102518
-EBUILD pidgin-window_merge-0.2_p20120420.ebuild 887 RMD160 67232d51fa2271b8aeb755cdc1b984bdc5d34f60 SHA1 3a4c65272bf39f5fd683977f38822d2420453262 SHA256 31db2e7fc30b5b64fe57c6f092caf08da80cff274698da4224bef3211f4f35d5
-MISC ChangeLog 335 RMD160 fd77f0208d41d6f9530744b7c9885c273e4a8149 SHA1 5361b2602cd765d125750ebe5d1a6c8f11e3bd90 SHA256 1df776edd3c4003f4fe1ee2dc4b2c8b2afa5681fe95db91aa4b14a62d5ca9c4c
-MISC metadata.xml 239 RMD160 69ef66c10d13ce09eb50805a19fbf4a7a10bb024 SHA1 a71fd233f4b2c2301a2544f9aad504f596a0ea28 SHA256 46132d153ef5ee1075082ff571718736b90a2a48f85d29c7e38e07ba81322e42
+DIST pidgin-window_merge-0.2_p20120420.tar.gz 27720 SHA256 8aa30f41189a6f8e5bc16277034675dfe6bec4d756f3e4ea86730e3e10102518
+DIST pidgin-window_merge-0.3_p20121111.tar.gz 33144 SHA256 f6c4149b13c125f02476f9c323ed70ff929d317df6aa0adc993abd8b3249bcce SHA512 49f477285ef4c550435752e9995455a7f88057b01c449036a16f7c2bf6306e3b197eddfde8ab35cc241ea7e71dd67ac2d38fd9bb0119b9ee5bcec59d5597f376 WHIRLPOOL ea8a17d1860cf925365d613ebb67cf854d75ac80945d15992443e263cad155a8d51edef1c51569e1957e2320d0609ad71bfd72c18c92c7577db20848df7737f0
+EBUILD pidgin-window_merge-0.2_p20120420.ebuild 887 SHA256 31db2e7fc30b5b64fe57c6f092caf08da80cff274698da4224bef3211f4f35d5 SHA512 07a6392ae7c8a18ee2ff3f21aa1f6e9d849d081f6da5ff754db3ba9cbcfd2e9c2c973e417b9a1c3e256829fdb0eb3265f65e0dc34b65e528f5d861fd52cb1c90 WHIRLPOOL 04b589946eec3afcb2291fcc7fd3062e7c7adaa5e36caf6b7bcb3a8f8ae4a5346830e88508b774e835b00da3e87fd04ce060b05ff70d1fb05612d62fdec6748d
+EBUILD pidgin-window_merge-0.3_p20121111.ebuild 887 SHA256 2dfe0a53449c393d7584a40869a1ae6dbef096474d99150cea4e7ab29a46150d SHA512 1e22e89f575736f1395fe1506fb3f33008a6341d2036aa8294154a3a4a5a773c36fa0e7adb33dbff01de991722dfbb9d3996955943b0e0c9de42f985cc955527 WHIRLPOOL c348ad03c98ad9017778e5b3a963e09f807f26b539332ff1f6bb6232314ab5653a9806056cc7a635a671f6954fb501352e128c40e6a7a38a4aaf09d79cbad6e5
+MISC ChangeLog 509 SHA256 ccba109d9b64f1705a78c6cd422b0ae703bc9dfe7ea3f3f6c59d85ac635a62fe SHA512 1a6a777b99125c66dbdec2744477c1103c281e65aefb38b35f6eafa7d1545c020ca103ae9630b87b48dd1ab791383d4da96bf698908b442acd41b5264ffb7e5a WHIRLPOOL 2504f0da54d362ffe304cbd48804943817d35acc99911f2ed84488581555e2e855e351bdf17902180c1942218f22e2de8dc2c0003ff9ef4f3ffd2aa509e4148d
+MISC metadata.xml 239 SHA256 46132d153ef5ee1075082ff571718736b90a2a48f85d29c7e38e07ba81322e42 SHA512 6355a32d108ed321ca77474192a5e83a05e173299dd34c95fe79b4bf464bb3d92b788ae4a03ee6a5235b17b22cffda0f1d557058a011c6d0b5eaf6ad54b7bbb5 WHIRLPOOL 07155d7fadf9c83395761153866d53dac1133efbb0e99057070bb83d612b5b385739bd39a5b0db363f28238f349fd8702f3b53db330ab588e846b47c52567f83
