@@ -1,6 +1,13 @@
 # ChangeLog for x11-plugins/pidgin-window_merge
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+
+*pidgin-window_merge-0.3_p20121111.ebuild (16 Mar 2013)
+
+  16 Mar 2013; Dmitry 'daks' Fomenko daks12@gmail.com
+  +pidgin-window_merge-0.3_p20121111.ebuild:
+  Version bump.
 
 *pidgin-window_merge-0.2_p20120420 (04 Jul 2012)
 
